ChangeLog for the Qt GUI to Astrophotography

20210109:
	* switch to homebrew provided qt5

20210108:
	* fix bad demangle_cstr calls

20201227:
	* trying to find out why the client crashes if the daemon is not
	  running but the service has been advertised via zeroconf

20200824:
	* make sure image resizing still works if the image dimensions are
	  no longer divisible by a high power of 2

20200822:
	* add quality to ccdwidgetcontroller

20200821:
	* switch to StarTile in StarChartWidget

20200820:
	* portability in HeartBeat.cpp

20200819:
	* add CallbackIdentity mixin class
	* turn callback classes into QObjects and use messages instead
	  of method calls to references (which run the danger of the
	  instance going away and the call crashing the system)

20200802:
	* convert filterwheel to use callbacks
	* Add heartbeat lost logic to the HeartBeat class
	* decouple timer changes for QTimer in systeminfowidget
	* add dead-logic to the HeartWidget
	* add signals for reconnecting for other widgets 
	* add global SystemInfoWidget for registration of heartbeat clients

20200801:
	* add HeartWidget
	* add callback to ccdcontrollerwidget (uncommented the update worker
	  thread too, everything still seems to work)

2020731:
	* make sure connection is established right at the beginning
	* fix typos
	* fix a bug of callbacks not being correctly unregistered in
	  coolercontrollerwidget and mountcontrollerwidget
	* add process size display

2020717:
	* fixing grid display in the StarChartWidget
	* add planet display in the StarChartWidget
	* separate the PlanetDrawing from the SkyDrawing so that it can be used
	  in the StarChartWidget
	* add constellation lines to StarChartWidget
	* add wide resolution to the finder chart
	* add configurable limit magnitude to StarChartWidget
	* background and border for the deep sky object labels

20200710:
	* migrate to Qt5.15
	* portability fixes

20200206:
	* added callback to coolercontrollerwidget
	* add CoolerCallbackI.cpp