@@ -12,7 +12,7 @@ TEMPLATE = app
 QMAKE_CXXFLAGS += @EXTRA_CXXFLAGS@
 QMAKE_LFLAGS += @EXTRA_LDFLAGS@
 
-QMAKE_MAC_SDK = @MACSDK@
+# QMAKE_MAC_SDK = @MACSDK@
 
 # Directories for the astrophotography library
 ASTROPATH = @ASTROPATH@
