@@ -864,7 +864,9 @@ void	StarChartWidget::mouseMoveEvent(QMouseEvent *event) {
 	QString	tiptext(astro::stringprintf("RA: %s DEC: %s",
 			tiptarget.ra().hms(':', -1).c_str(),
 			tiptarget.dec().dms(':', -1).c_str()).c_str());
-	QToolTip::showText(event->globalPos(), tiptext);
+	QPointF	wheref = event->globalPosition();
+	QPoint	where(wheref.x(), wheref.y());
+	QToolTip::showText(where, tiptext);
 }
 
 /**
