@@ -10,7 +10,7 @@ TEMPLATE = lib
 CONFIG += staticlib
 CONFIG += widgets
 
-QMAKE_MAC_SDK = @MACSDK@
+# QMAKE_MAC_SDK = @MACSDK@
 
 QMAKE_CXXFLAGS += @EXTRA_CXXFLAGS@
 QMAKE_LFLAGS += @EXTRA_LDFLAGS@
