@@ -11,7 +11,7 @@ CONFIG += staticlib
 QMAKE_CXXFLAGS += @EXTRA_CXXFLAGS@
 QMAKE_LFLAGS += @EXTRA_LDFLAGS@
 
-QMAKE_MAC_SDK = @MACSDK@
+# QMAKE_MAC_SDK = @MACSDK@
 
 # Directories for ICE and the astrophotography library
 ICEDIR = @ICEDIR@
